# mission-control

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  PLANS.md  README.md  biome.json  package.json
.claude/: settings.json
.github/workflows/: harness.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: ARCHITECTURE.md  OBSERVABILITY.md
docs/conversations/: Conversations.md  session--bffa010c.md  session-2026-03-04-180a708a.md  session-2026-03-04-1f2eae94.md  session-2026-03-04-40654edb.md  session-2026-03-04-a5d27ad9.md  session-2026-03-04-a6bfae42.md  session-2026-03-04-c5585ee4.md  session-2026-03-04-e5cb6506.md  session-2026-03-04-ffdbef35.md  session-2026-04-12-4ecf5db9.md
docs/spec/: 01-requirements.md  02-design.md  03-tasks.md
scripts/harness/: audit.sh  lint.sh  smoke.sh  test.sh  typecheck.sh
src/: bindings.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  credentials.rs  fs.rs  git.rs  mod.rs  project.rs  session.rs  terminal.rs  workspace.rs
src-tauri/src/models/: agent.rs  error.rs  events.rs  fs.rs  git.rs  mod.rs  project.rs  session.rs  terminal.rs  workspace.rs
src-tauri/src/services/: agent.rs  api_server.rs  auth_gateway.rs  credential_store.rs  database.rs  fs_watcher.rs  git.rs  hook_config.rs  hook_server.rs  mod.rs  persistence.rs  project.rs  terminal.rs
src-tauri/src/services/parsers/: claude_code.rs  mod.rs
src/components/: AddProjectDialog.tsx  AgentCard.tsx  AgentTile.tsx  ChatView.tsx  CheckpointList.tsx  CreateWorktreeDialog.tsx  CredentialSettings.tsx  FileTreeView.tsx  GitGraph.tsx  GitGraphPlaceholder.tsx  GitLogView.tsx  (+12 more)
(+43 files in other folders)
