[package]
name = "mc"
version = "0.1.0"
description = "CLI tool for Mission Control — query and control your agent orchestration"
authors = ["broomva"]
edition = "2021"

[[bin]]
name = "mc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
