[package]
name = "mission-control"
version = "0.1.0"
description = "A Tauri 2.0 desktop app for unified terminal management and AI agent orchestration"
authors = ["broomva"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "mission_control_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
git2 = "0.20"
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript", "derive"] }
specta-typescript = "0.0.9"
libc = "0.2"
axum = "0.8"

[dev-dependencies]
tempfile = "3"
